CombinedService test(2)